TODO
* add tests
* update manuals
* update msvscpp files
* add write support (at minimum the stubs)

20130224
* 2013 update
* code clean up

20121216
* worked on refactor to combine fdata and mfdata

20121215
* worked on refactor to combine fdata and mfdata

20121212
* worked on refactor to combine fdata and mfdata

20121211
* created stand-alone version based on libfguid
