@@ -33,11 +33,11 @@
  * for local use of libfdata
  */
 #else
-#define LIBFDATA_VERSION						20130224
+#define LIBFDATA_VERSION						20130303
 
 /* The libfdata version string
  */
-#define LIBFDATA_VERSION_STRING						"20130224"
+#define LIBFDATA_VERSION_STRING						"20130303"
 
 /* The library flags definitions
  */
