@@ -70,6 +70,7 @@ struct libfdata_internal_tree
 	       intptr_t *file_io_handle,
 	       libfdata_tree_node_t *node,
 	       libfcache_cache_t *cache,
+	       int node_data_file_index,
 	       off64_t node_data_offset,
 	       size64_t node_data_size,
                uint8_t read_flags,
@@ -82,6 +83,7 @@ struct libfdata_internal_tree
 	       intptr_t *file_io_handle,
 	       libfdata_tree_node_t *node,
 	       libfcache_cache_t *cache,
+	       int node_data_file_index,
 	       off64_t sub_nodes_offset,
 	       size64_t sub_nodes_size,
                uint8_t read_flags,
@@ -104,6 +106,7 @@ int libfdata_tree_initialize(
             intptr_t *file_io_handle,
             libfdata_tree_node_t *node,
             libfcache_cache_t *cache,
+            int node_data_file_index,
             off64_t node_data_offset,
             size64_t node_data_size,
             uint8_t read_flags,
@@ -113,6 +116,7 @@ int libfdata_tree_initialize(
             intptr_t *file_io_handle,
             libfdata_tree_node_t *node,
             libfcache_cache_t *cache,
+            int node_data_file_index,
             off64_t sub_nodes_offset,
             size64_t sub_nodes_size,
             uint8_t read_flags,
