@@ -1,8 +1,12 @@
 TODO
+* update libfdata_tree_initialize
 * add tests
 * update manuals
 * update msvscpp files
 * add write support (at minimum the stubs)
+
+20130303
+* worked on refactor to combine fdata and mfdata
 
 20130224
 * 2013 update
